// Copyright 2024 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.reporting.v2alpha;

import "google/api/field_behavior.proto";
import "google/type/dayofweek.proto";

option java_package = "org.wfanet.measurement.reporting.v2alpha";
option java_multiple_files = true;
option java_outer_classname = "MetricFrequencySpecProto";

// The frequency at which metrics are reported.
message MetricFrequencySpec {
  // Specifies that metrics should be calculated on a weekly basis with
  // respect to the given day of the week.
  //
  // If the day of the week is not the same as the start or end day of the
  // report partial weeks will reported for the first and/or last value
  // in the result set.
  message Weekly {
    // The day of week to use as the starting day
    google.type.DayOfWeek start_day = 1 [
      (google.api.field_behavior) = REQUIRED,
      (google.api.field_behavior) = IMMUTABLE
    ];
  }
  // Whether to report metrics weekly
  Weekly weekly = 1 [(google.api.field_behavior) = IMMUTABLE];
  // Whether to report metrics across the entire `reporting_interval`
  bool total = 2 [(google.api.field_behavior) = IMMUTABLE];
}
